@startuml

title __APP's Class Diagram__\n

  namespace com.example.multiplication {
    class com.example.multiplication.BuildConfig {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.CustomListAdapter {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game1Activity {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game2Activity {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.MainActivity {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Question {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.QuestionList {
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.ResultActivity {
    }
  }
  

  com.example.multiplication.CustomListAdapter -up-|> android.widget.ArrayAdapter
  com.example.multiplication.Game o-- com.example.multiplication.QuestionList : questionList
  com.example.multiplication.Game1Activity .up.|> java.io.Serializable
  com.example.multiplication.Game1Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.Game1Activity o-- com.example.multiplication.Game : game
  com.example.multiplication.Game2Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.Game2Activity o-- com.example.multiplication.Game : game
  com.example.multiplication.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.ResultActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
